[package]
name = "axum-boiler"
version = "0.1.0"
edition = "2021"

[features]
default = ["threads", "log-spans", "export"]
export = []
log = []
log-headers = ["log"]
log-spans = ["log"]
multi-line = []
threads = ["tokio/rt-multi-thread"]

[dependencies]
axum = "0.6.7"
tower-http = { version = "0.3.5", features = ["trace", "catch-panic"] }
hyper = { version = "0.14.24", default-features = false }

# Runtime
tokio = { version = "1.25.0", features = ["signal"] }

# Error
thiserror = "1.0.38"

# Trace
tracing = "0.1.37"
tracing-subscriber =  "0.3.16"
chrono = "0.4.23"
rand = "0.8.5"
