[package]
name = "boile-rs"
version = "0.1.2"
edition = "2024"

[features]
default = []

# Enable logging
log = [
  "dep:chrono",
  "dep:rand",
  "dep:tracing",
  "dep:tracing-subscriber",
  "chrono/clock",
  "rand/thread_rng",
  "tracing-subscriber/registry",
]
# Log the request headers
log-headers = ["log"]
# Always log spans even when no events are emitted
log-spans = ["log"]
# Display the log fields in separate lines
log-multi-line = ["log"]
# Enable request tracing layer
log-tower = [
  "log",
  "dep:hyper",
  "dep:tower-http",
  "tower-http/trace",
]

# Enable tokio runtime
rt = [
  "dep:tokio",
  "tokio/rt",
]
# Use multi-thread with tokio
rt-threads = [
  "rt",
  "tokio/rt-multi-thread",
]
rt-shutdown = [
  "rt",
  "tokio/signal",
]

# Enable tower panic handling
panic = [
  "dep:tower-http",
  "tower-http/catch-panic",
]

# Enable axum with http1
server-h1 = [
  "dep:axum",
  "dep:hyper",
  "dep:tokio",
  "axum/http1",
  "axum/tokio",
  "hyper/http1",
  "hyper/server",
  "tokio/net",
]

# Enable axum with http2
server-h2 = [
  "dep:axum",
  "dep:hyper",
  "dep:tokio",
  "axum/http2",
  "axum/tokio",
  "hyper/http2",
  "hyper/server",
  "tokio/net",
]

[dependencies]

# Log
chrono = { version = "0.4", default-features = false, optional = true }
rand = { version = "0.9", default-features = false, optional = true }
tower-http = { version = "0.6", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", default-features = false, optional = true }

# Rt
tokio = { version = "1.43", default-features = false, optional = true }
clap = { version = "4.5", default-features = false, features = ["std", "derive"], optional = true }

# Server
axum = { version = "0.8", default-features = false, optional = true }
hyper = { version = "1.6", default-features = false, optional = true }

# Error
thiserror = "2.0"
